--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "anpm": "^1.0.1",
+    "axios": "^0.18.0",
     "fastclick": "^1.0.6",
+    "install": "^0.12.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
