--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "anpm": "^1.0.1",
     "axios": "^0.18.0",
+    "better-scroll": "^1.12.6",
     "fastclick": "^1.0.6",
     "install": "^0.12.1",
     "stylus": "^0.54.5",
